add tickets API
