# API_documentation.yaml
@@ -155,6 +155,18 @@ components:
         school:
           type: string
           example: 'Universitas Prasetya Mulya'
+          
+    Ticket:
+      properties:
+        revieweeId:
+          type: string
+          example: '5db492c349a67b33b8d0a2a2'
+        name:
+          type: string
+          example: 'Timothy Bryan'
+        school:
+          type: string
+          example: 'Universitas Prasetya Mulya'
 
 paths:
   /signup:
@@ -572,3 +584,50 @@ paths:
           description: Review not found.
         '500':
           description: There was an error adding helpfullness vote to the review.
+          
+  /tickets:
+    post:
+      summary: Create ticket and send email to dosen-ku@gmail.com.
+      tags: 
+      - Ticket
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+             type: object
+             required:
+              - authorId
+              - authorEmail
+              - targetId
+              - targetType
+              - subject
+              - message
+             properties:
+              authorId:
+                type: string
+                example: '5e4745bdf4114d4630af5946'
+              authorEmail:
+                type: string
+                example: 'foo.bar@gmail.com'
+              targetId:
+                type: string
+                example: '5e4745bdf4114d4630af5946'
+              targetType:
+                type: string
+                example: 'review'
+              subject:
+                type: string
+                example: 'Inappropriate Review'
+              message:
+                type: string
+                example: 'Review "lorem ipsum" is not kid friendly'
+      responses:
+        '201':
+          description: Create new ticket is successful.
+        '401':
+          description: Authentication is required to create ticket.
+        '500':
+          description: There was an error creating the ticket.
